# ASL-api

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  convert.py  cookies.txt  cookies_test.txt  create_admin.py  docker-compose.yml  nginx.conf  out.txt  pyproject.toml  req.txt  requirements.txt  requriments.txt  turnserver.conf
core/: db.sqlite3  requirements.txt
core/core/: urls.py
core/core/apps/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/core/settings/: base.py
docs/api/: pipeline.md
nginx/: default.conf
src/: db.sqlite3  drop_billing.py  manage.py  seed_plans.py  upgrade_user.py
src/tafahom_api/: asgi.py  env.py  urls.py
src/tafahom_api/apps/v1/: urls.py
src/tafahom_api/common/: decorators.py  emails.py  enums.py  exception_handler.py
src/tafahom_api/config/: asgi.py  urls.py
src/tafahom_api/management/commands/: award_weekly_bonus.py  award_weekly_tokens.py
src/tafahom_api/settings/: __init__.py  base.py  development.py  env.py  production.py
src/templates/emails/: contribution_status.html  contribution_submitted.html  reset_password.html  verification_code.html
tests/: test_security.py
tests/apps/: api_client.py  conftest.py
tests/apps/v1/: conftest.py
tests/apps/v1/authentication/: conftest.py  test_views.py
tests/apps/v1/billing/: conftest.py  test_views.py
tests/apps/v1/dataset/: conftest.py  test_views.py
tests/apps/v1/localization/: conftest.py  test_views.py
tests/apps/v1/translation/: conftest.py  pipeline_tests.py  test_integration_pipeline.py  test_test_gloss.py  (+4 more)
(+194 files in other folders)
